@@ -1,3 +1,7 @@
+2013-08-30  Chris Searle  <chris@chrissearle.org>
+
+        * Get conference start and end dates from session list if conference doesn't have dates set and if session list isn't empty
+
 2013-08-29  Chris Searle  <chris@chrissearle.org>
 
         * 3.5b13
